--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ enum-compat==0.0.2
 eventlet==0.21.0
 Flask==0.12.2
 Flask-SocketIO==2.9.3
+gevent==1.2.2
 greenlet==0.4.12
 gunicorn==19.7.1
 itsdangerous==0.24
