--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==0.12.2
 Flask-Cors==3.0.3
 Flask-SocketIO==2.9.3
 gevent==1.2.2
+greenlet==0.4.12
 gunicorn==18.0
 itsdangerous==0.24
 Jinja2==2.10
